--- a/vignettes/examplesnd.Rmd
+++ b/vignettes/examplesnd.Rmd
@@ -31,6 +31,11 @@ source("plot_examples.R", local = knitr::knit_global())
 RNGversion("3.6.0") 
 ```
 
+The
+[`plot_examples.R`](https://github.com/clugen/clugenr/blob/master/vignettes/plot_examples.R)
+containing the helper functions for plotting these examples is available
+[here](https://github.com/clugen/clugenr/blob/master/vignettes/plot_examples.R).
+
 ## Basic 1D example with density plot
 
 ```{r}
