Docs: small fixes in theory

--- a/vignettes/theory.Rmd
+++ b/vignettes/theory.Rmd
@@ -136,7 +136,7 @@ points, and $\phi$ is a boolean which determines whether empty clusters are
 acceptable.
 
 The $c_s()$ function is an optional parameter, allowing users to customize its
-behavior. By default, $c_s()$ is implemented by the `clusizes()`) function,
+behavior. By default, $c_s()$ is implemented by the `clusizes()` function,
 which behaves according to the following algorithm:
 
 1. Determine the size $p_i$ of each cluster $i$ according to
@@ -294,7 +294,7 @@ supporting line, the following algorithm is used:
   $\hat{\mathbf{d}}_i=\hat{\mathbf{r}}$ and terminate the algorithm.
 * **4.** If $\hat{\mathbf{r}}$ is parallel to $\hat{\mathbf{d}}$ go to **1**.
 * **5.** Determine vector $\mathbf{d}_\perp$ orthogonal to $\hat{\mathbf{d}}$
-  using the first iteration of the Gram--Schmidt process:
+  using the first iteration of the Gram-Schmidt process:
   $$
   \mathbf{d}_\perp=\hat{\mathbf{r}}-\cfrac{\hat{\mathbf{d}}\cdot\hat{\mathbf{r}}}{\hat{\mathbf{d}}\cdot\hat{\mathbf{d}}}\:\hat{\mathbf{d}}
   $$
